Fixing media alignment WYSIWYG

--- a/app/assets/stylesheets/component/admin/_wysiwyg.scss
+++ b/app/assets/stylesheets/component/admin/_wysiwyg.scss
@@ -157,7 +157,6 @@
     left: 50%;
     transform: translateX(-10px);
     border: 10px solid transparent;
-    // border-bottom-color: palette(accent2_hi);
     content: '';
   }
 
@@ -170,16 +169,21 @@
     overflow: hidden;
     padding: 0 rem(20);
     border-radius: rem(20);
-    // background: palette(accent2_hi);
+    background: linear-gradient(to bottom, rgba(33, 33, 33, .95), rgba(0, 0, 0, .95));
   }
 
-  li { margin: 0; }
+  li {
+    margin: 0;
 
-  .i {
-    height: 1.6em;
-    width:  1.6em;
-    border: 1px solid var(--text);
-    border-radius: 1px;
+    &:empty {
+      margin: 0 .2em;
+      border-color: rgba( 255, 255, 255, .1 );
+    }
+  }
+
+  .medium-editor-action {
+    background: transparent;
+    color: var(--grey-0);
   }
 }
 
@@ -223,12 +227,12 @@
     &[data-align=center] { margin: 1em auto; }
   }
 
-  > * {
+  > * { // sass-lint:disable-line no-universal-selectors
     margin: 1em 0;
 
     &:first-child { margin-top: 0; }
     &:last-child  { margin-bottom: 0; }
-}
+  }
 
   blockquote {
     padding: .5em .8em !important; // sass-lint:disable-line no-important
